# Stuff_I_Made

./: .replit  1  Cookie clicker bot  Cookie clicker code(took like 6-10 mins)  DeliciousGizmoBakery (1).txt  README.md  RPS  StockGame  Yahtzee
PyCharm/: WhichBinDoesItGoIn
Replit/: pyproject.toml
Replit Games/: Yahtzee
StockGame Main/: ?  StockGame stocks
Stockgame/: Main.py  Stocks.py
chess bot/: chess bot v2(not working)  chess bot(incomplete)  mouse-chess-bot  v2(added two giga files)  v3 (with learning)
chess bot/ai learning/: V10 (Probably SECOND last one!!)  V9 (added mostly everything)  v2?  v3  v4  v5  v6  v7  v8 ADDING IN STOCKFISH  v8 WORKS!
chess bot/ai learning/V11/: main.py
chess bot/using_mouse/: v2
donate and give/: index.html  signin.html
